fixed problem with the display of the button and version being too close oand overlaying each other

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -110,8 +110,8 @@ a:hover {
   justify-content: center;
   align-items: center;
   position: absolute;
-  bottom: 4%;
-  left:80%;
+  bottom: 2%;
+  left:70%;
 }
 
 
